--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         with: 
           name: Stable Package
           path: |
-            packaging/archlinux-driver-manager/*.pkg.tar.*
+            packaging/aldm/*.pkg.tar.*
           if-no-files-found: error
   release:  
     needs: build        
@@ -77,5 +77,5 @@ jobs:
           tag_name: ${{ env.LATEST_TAG }}
           name: ${{ env.LATEST_TAG }}
           files: |
-            ${{ steps.download_package_step.outputs.download-path }}/packaging/archlinux-driver-manager/*.pkg.tar.*
+            ${{ steps.download_package_step.outputs.download-path }}/packaging/aldm/*.pkg.tar.*
             
