--- a/packaging/aldm/PKGBUILD
+++ b/packaging/aldm/PKGBUILD
@@ -1,6 +1,6 @@
 #! /usr/bin/env sh
 
-# Maintainer: shivanandvp <shivanandvp.oss@gmail.com> <shivanandvp@rebornos.org>
+# Maintainer: shivanandvp <shivanandvp.oss@gmail.com, shivanandvp@rebornos.org>
 
 pkgver=0.0.1
 pkgrel=1
@@ -46,5 +46,5 @@ package() {
     cd "$PROJECT_DIRECTORY"
     install -Dm644 "LICENSE" "$pkgdir/usr/share/licenses/$PACKAGE_NAME_STUB/LICENSE"
     install -Dm755 "target/release/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB"
-    ln -s "/usr/bin/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/aldm"
+    # ln -s "/usr/bin/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/aldm" # The binary is already named aldm
 }
