--- a/packaging/aldm-git/PKGBUILD
+++ b/packaging/aldm-git/PKGBUILD
@@ -51,8 +51,7 @@ package() {
     # To bypass makepkg's dependency check during build-time
     depends+=("$PACKAGE_NAME_STUB-db")
 
-    cd "$PROJECT_DIRECTORY"
-    install -Dm644 "LICENSE" "$pkgdir/usr/share/licenses/$PACKAGE_NAME_STUB/LICENSE"
-    install -Dm755 "target/release/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB"
+    install -Dm644 "$PROJECT_DIRECTORY/LICENSE" "$pkgdir/usr/share/licenses/$PACKAGE_NAME_STUB/LICENSE"
+    install -Dm755 "$PROJECT_DIRECTORY/target/release/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB"
     # ln -s "/usr/bin/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/aldm" # The binary is already named aldm
 }
