--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,22 @@ description = "A driver manager for Arch Linux"
 keywords = ["driver", "drivers", "hardware", "arch"]
 categories = ["command-line-utilities"]
 exclude = ["packaging/*", ".github/*", "*.code-workspace"]
+default-run = "aldm"
+
+[[bin]]
+name = "aldm"
+path = "src/aldm.rs"
+
+[[bin]]
+name = "aldm-gui"
+path = "src/aldm-gui.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = { version = "4.3", features = ["derive", "cargo", "wrap_help"] }
 clap-verbosity-flag = "2.0"
-dirs = "5.0.1"
+lazy_static = "1.4"
 snafu = "0.7"
 tracing = "0.1"
 tracing-appender = "0.2"
