--- a/packaging/aldm-local/PKGBUILD
+++ b/packaging/aldm-local/PKGBUILD
@@ -2,48 +2,48 @@
 
 # Maintainer: shivanandvp <shivanandvp.oss@gmail.com, shivanandvp@rebornos.org>
 
-pkgver=0.0.1
-pkgrel=1
-
 PACKAGE_NAME_STUB="aldm"
-pkgname="$PACKAGE_NAME_STUB-local"
 provides=("$PACKAGE_NAME_STUB")
-conflicts=("$PACKAGE_NAME_STUB" "$PACKAGE_NAME_STUB-git")
-depends=('pacman' 'pciutils' 'usbutils')
-makedepends=('cargo')
-source=()
-sha256sums=()
-PROJECT_DIRECTORY="$(dirname -- "$(dirname -- "$(pwd)")")"
-RESOURCE_DIRECTORY="$PROJECT_DIRECTORY/packaging/resources"
-BUILD_DIRECTORY="$PROJECT_DIRECTORY/target"
-
+depends=('pacman' 'pciutils' 'usbutils' 'gtk4')
 arch=('x86_64' 'aarch64')
 pkgdesc='A driver manager for Arch Linux.'
 url="https://github.com/shivanandvp/$PACKAGE_NAME_STUB"
-license=('MPL-2.0')
+license=('MPL-2.0') 
 
+# -------- # 
+# Specific #
+# -------- #
+pkgver=2023_08_24T11_50_03_05_00
+pkgrel=1
+pkgname="$PACKAGE_NAME_STUB-local"
+conflicts=("$PACKAGE_NAME_STUB" "$PACKAGE_NAME_STUB-git")
+makedepends=('cargo')
+source=()
+sha256sums=()
 prepare() {
-    cd "$PROJECT_DIRECTORY"
-    RUSTUP_TOOLCHAIN=stable \
-    cargo fetch \
-        --locked
+    export PROJECT_DIRECTORY="$(dirname -- "$(dirname -- "$(dirname -- "$(pwd)")")")"
 }
-
-build() {     
-    cd "$PROJECT_DIRECTORY"
-    RUSTUP_TOOLCHAIN=stable \
-    cargo build \
-        --release \
-        --locked \
-        --all-features \
-        --target-dir="target"
+pkgver() {
+    date -Is | tr :- _
 }
+# -------- #
 
+RESOURCE_DIRECTORY="$PROJECT_DIRECTORY/packaging/resources"
+BUILD_DIRECTORY="$PROJECT_DIRECTORY/target"
+build() {   
+    (   cd "$PROJECT_DIRECTORY" \
+        && RUSTUP_TOOLCHAIN=stable \
+        cargo build \
+            --release \
+            --locked \
+            --all-features \
+            --target-dir="target"
+    )
+}
 package() {
     # To bypass makepkg's dependency check during build-time
-    # depends+=("$PACKAGE_NAME_STUB-db")
-
+    optdepends+=("$PACKAGE_NAME_STUB-db")
     install -Dm644 "$PROJECT_DIRECTORY/LICENSE" "$pkgdir/usr/share/licenses/$PACKAGE_NAME_STUB/LICENSE"
     install -Dm755 "$PROJECT_DIRECTORY/target/release/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB"
-    # ln -s "/usr/bin/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/aldm" # The binary is already named aldm
- }
+}
+
