--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ snafu = "0.7"
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+relm4 = "0.6"
+relm4-components = "0.6"
