--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ lazy_static = "1.4"
 snafu = "0.7"
 tracing = "0.1"
 tracing-appender = "0.2"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = "0.3"
 relm4 = "0.6"
 relm4-components = "0.6"
 xdg = "2.5"
