--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,13 +24,25 @@ path = "src/aldm-gui.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3", features = ["derive", "cargo", "wrap_help"] }
-clap-verbosity-flag = "2.0"
-lazy_static = "1.4"
-snafu = "0.7"
+
+# Logging
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = "0.3"
+
+# Configuration
+lazy_static = "1.4"
+xdg = "2.5"
+
+# Error handling
+snafu = "0.7"
+
+# CLI
+clap = { version = "4.3", features = ["derive", "cargo", "wrap_help"] }
+clap-verbosity-flag = "2.0"
+anstream = "0.5"
+owo-colors = "3.5"
+
+# GUI
 relm4 = "0.6"
 relm4-components = "0.6"
-xdg = "2.5"
