--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,10 @@ xdg = "2.5"
 # Error handling
 snafu = "0.7"
 
+# Data
+serde = { version = "1.0", features = ["derive"] }
+speedy = "0.8"
+
 # CLI
 clap = { version = "4.4", features = ["derive", "cargo", "wrap_help", "env"] }
 clap-verbosity-flag = "2.0"
@@ -46,3 +50,4 @@ owo-colors = {version = "3.5", features = ["supports-colors"]}
 # GUI
 relm4 = "0.6"
 relm4-components = "0.6"
+serde-aux = "4.2.0"
