--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,9 @@ path = "src/aldm.rs"
 name = "aldm-gui"
 path = "src/aldm-gui.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+clap_mangen = "0.2"
+clap = "4.4"
 
 [dependencies]
 
@@ -40,6 +42,9 @@ snafu = "0.7"
 # Data
 serde = { version = "1.0", features = ["derive"] }
 speedy = "0.8"
+
+# Internatinalization
+fluent = "0.16"
 
 # CLI
 clap = { version = "4.4", features = ["derive", "cargo", "wrap_help", "env"] }
