--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ path = "src/aldm-gui.rs"
 # Logging
 tracing = "0.1"
 tracing-appender = "0.2"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["serde"] }
 
 # Filesystem
 xdg = "2.5"
@@ -40,7 +40,9 @@ lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde-aux = "4.2.0"
 serde_yaml = "0.9"
+tracing-serde = "0.1"
 speedy = "0.8"
+log = { version = "0.4", features = ["serde"] }
 
 # Internatinalization
 fluent = "0.16"
