--- a/packaging/aldm-local/PKGBUILD
+++ b/packaging/aldm-local/PKGBUILD
@@ -13,7 +13,8 @@ license=('MPL-2.0')
 # -------- # 
 # Specific #
 # -------- #
-pkgver=2023_08_27T01_10_21_05_00
+PKGVER_STUB=0.0.1
+pkgver=0.0.1.2023_08_28T20_43_50_05_00
 pkgrel=1
 pkgname="$PACKAGE_NAME_STUB-local"
 conflicts=("$PACKAGE_NAME_STUB" "$PACKAGE_NAME_STUB-git")
@@ -24,7 +25,7 @@ prepare() {
     export PROJECT_DIRECTORY="$(dirname -- "$(dirname -- "$(dirname -- "$(pwd)")")")"
 }
 pkgver() {
-    date -Is | tr :- _
+    echo "$PKGVER_STUB.$(date -Is | tr '\:\-\+\;' '_')"
 }
 # -------- #
 
@@ -44,5 +45,6 @@ package() {
     optdepends+=("$PACKAGE_NAME_STUB-db")
     install -Dm644 "$PROJECT_DIRECTORY/LICENSE" "$pkgdir/usr/share/licenses/$PACKAGE_NAME_STUB/LICENSE"
     install -Dm755 "$PROJECT_DIRECTORY/target/release/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB"
+    install -Dm755 "$PROJECT_DIRECTORY/target/release/$PACKAGE_NAME_STUB-gui" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB-gui"
 }
 
