--- a/packaging/aldm/PKGBUILD
+++ b/packaging/aldm/PKGBUILD
@@ -41,4 +41,5 @@ package() {
     optdepends+=("$PACKAGE_NAME_STUB-db")
     install -Dm644 "$PROJECT_DIRECTORY/LICENSE" "$pkgdir/usr/share/licenses/$PACKAGE_NAME_STUB/LICENSE"
     install -Dm755 "$PROJECT_DIRECTORY/target/release/$PACKAGE_NAME_STUB" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB"
+    install -Dm755 "$PROJECT_DIRECTORY/target/release/$PACKAGE_NAME_STUB-gui" "$pkgdir/usr/bin/$PACKAGE_NAME_STUB-gui"
 }
