ci: :construction_worker: Try fix CI

--- a/.github/workflows/pre_release.yml
+++ b/.github/workflows/pre_release.yml
@@ -73,4 +73,4 @@ jobs:
           tag_name: ${{ env.GIT_VERSION }}
           name: ${{ env.GIT_VERSION }}
           files: |
-            ${{ steps.download_package_step.outputs.download-path }}/packaging/aldm-git/*.pkg.tar.*
+            ${{ steps.download_package_step.outputs.download-path }}/*.pkg.tar.*
