--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,5 +77,5 @@ jobs:
           tag_name: ${{ env.LATEST_TAG }}
           name: ${{ env.LATEST_TAG }}
           files: |
-            ${{ steps.download_package_step.outputs.download-path }}/packaging/aldm/*.pkg.tar.*
+            ${{ steps.download_package_step.outputs.download-path }}/*.pkg.tar.*
             
