build: :construction_worker: Add Gtk4 as make dependency
Add Gtk4 as make dependency to fix missing Pango from the Github actions container

--- a/packaging/aldm-git/PKGBUILD
+++ b/packaging/aldm-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgbase='aldm'
 pkgname=('aldm-cli-git' 'aldm-gui-git' 'aldm-db-git')
 arch=('x86_64')
 url="https://github.com/shivanandvp/aldm"
-makedepends=('git' 'cargo')
+makedepends=('git' 'cargo' 'gtk4' 'base-devel')
 source=("git+https://github.com/shivanandvp/aldm")
 sha256sums=('SKIP')
 
