--- a/packaging/aldm-local/PKGBUILD
+++ b/packaging/aldm-local/PKGBUILD
@@ -9,7 +9,7 @@ pkgbase='aldm'
 pkgname=('aldm-cli-local' 'aldm-gui-local' 'aldm-db-local')
 arch=('x86_64')
 url="https://github.com/shivanandvp/aldm"
-makedepends=('cargo')
+makedepends=('cargo' 'gtk4' 'base-devel')
 source=()
 sha256sums=()
 
