chore: :wrench: Adding some Nvidia PCI IDs

--- a/aldm-db/input-file.yaml
+++ b/aldm-db/input-file.yaml
@@ -6,8 +6,20 @@ version: "0.0.1"
 setups:
 # =====
 
-- condition: nvidia_maxwell&lts_kernel
-  packages: nvidia-lts
+- condition: "(nvidia_maxwell|nvidia_pascal|nvidia_volta|nvidia_turing|nvidia_ampere|nvidia_ada_lovelace)&mainline_kernel"
+  install: nvidia
+- condition: "(nvidia_maxwell|nvidia_pascal|nvidia_volta|nvidia_turing|nvidia_ampere|nvidia_ada_lovelace)&lts_kernel"
+  install: nvidia-lts
+- condition: "(nvidia_maxwell|nvidia_pascal|nvidia_volta|nvidia_turing|nvidia_ampere|nvidia_ada_lovelace)&!mainline_kernel&!lts_kernel"
+  install: nvidia-dkms
+- condition: "(nvidia_maxwell|nvidia_pascal|nvidia_volta|nvidia_turing|nvidia_ampere|nvidia_ada_lovelace)&mainline_kernel"
+  install: nvidia-beta
+- condition: "(nvidia_maxwell|nvidia_pascal|nvidia_volta|nvidia_turing|nvidia_ampere|nvidia_ada_lovelace)&!mainline_kernel"
+  install: nvidia-dkms
+- condition: "(nvidia_turing|nvidia_ampere|nvidia_ada_lovelace)&mainline_kernel"
+  install: nvidia-open
+- condition: "(nvidia_turing|nvidia_ampere|nvidia_ada_lovelace)&!mainline_kernel"
+  install: nvidia-open-dkms  
 
 # ===============
 named_conditions:
@@ -23,14 +35,51 @@ named_conditions:
 # vendor_id: 1a71 and kernel: linux_lts is only true if both the criteria are 
 # true.
 # However, the inner values have an OR relationship. For example, a criterion
-# of pci_id: [f14a,0e35] means at least one of f14a or 0e35 is present (not 
+# of device_id: [f14a,0e35] means at least one of f14a or 0e35 is present (not 
 # necessarily both).
 # More complicated conditional relationships can be represented as
 # relationships between named conditions.
+# In the test mode (--test commandline argument), arbitrary user-specified 
+# criteria can be assumed to be true.
+# The conditions are evaluated and their evaluated values are cached as found
+# under the above setups. 
+
+- mainline_kernel:
+    kernel: linux
+
+- lts_kernel:
+    kernel: linux_lts
+
+- grub:
+    package: grub
+
+- nvidia_ada_lovelace:
+    vendor_id: 10de
+    device_id: [2681, 2684, 26b1, 26b2, 26b5, 26b8, 26b9, 26f5, 2704, 2717, 2730, 2757, 2782, 2785, 2786, 27a0, 27b0, 27b2, 27b7, 27b8, 27ba, 27bb, 27e0, 2803, 2805, 2820, 2838, 2860, 2882, 28a0, 28a1, 28b8, 28e0, 28e1]
+
+- nvidia_ampere:
+    vendor_id: 10de
+    device_id: [2200, 2203, 2204, 2205, 2206, 2207, 2208, 220a, 220d, 2216, 222b, 222f, 2230, 2231, 2232, 2233, 2235, 2236, 2237, 2238, 223f, 228b, 228e, 2414, 2420, 2438, 2460, 2482, 2483, 2484, 2486, 2487, 2488, 2489, 248a, 249c, 249d, 249f, 24a0, 24a4, 24ac, 24ad, 24af, 24b0, 24b1, 24b6, 24b7, 24b8, 24b9, 24ba, 24bb, 24bf, 24c7, 24c8, 24c9, 24dc, 24dd, 24df, 24e0, 24fa, 2501, 2503, 2504, 2505, 2507, 2508, 2509, 2520, 2521, 2523, 252f, 2531, 2544, 2560, 2561, 2563, 2571, 2582, 2583, 25a0, 25a2, 25a3, 25a4, 25a5, 25a6, 25a7, 25a9, 25aa, 25ab, 25ac, 25ad, 25af, 25b5, 25b6, 25b8, 25b9, 25ba, 25bb, 25bc, 25bd, 25e0, 25e2, 25e5, 25ec, 25ed, 25f9, 25fa, 25fb]
+
+- nvidia_turing:
+    vendor_id: 10de
+    device_id: [1e02, 1e03, 1e04, 1e07, 1e09, 1e2d, 1e2e, 1e30, 1e36, 1e37, 1e38, 1e3c, 1e3d, 1e3e, 1e78, 1e81, 1e82, 1e84, 1e87, 1e89, 1e90, 1e91, 1e93, 1eab, 1eae, 1eb0, 1eb1, 1eb4, 1eb5, 1eb6, 1eb8, 1eb9, 1eba, 1ebe, 1ec2, 1ec7, 1ed0, 1ed1, 1ed3, 1ef5, 1f02, 1f03, 1f04, 1f06, 1f07, 1f08, 1f09, 1f0a, 1f0b, 1f10, 1f11, 1f12, 1f14, 1f15, 1f2e, 1f36, 1f42, 1f47, 1f50, 1f51, 1f54, 1f55, 1f76, 1f81, 1f82, 1f83, 1f91, 1f92, 1f94, 1f95, 1f96, 1f97, 1f98, 1f99, 1f9c, 1f9d, 1f9f, 1fa0, 1fa1, 1fae, 1fb0, 1fb1, 1fb2, 1fb6, 1fb7, 1fb8, 1fb9, 1fba, 1fbb, 1fbc, 1fbf, 1fd9, 1fdd, 1ff0, 1ff2, 1ff9, 2182, 2183, 2184, 2187, 2188, 2189, 2191, 2192, 21ae, 21bf, 21c2, 21c4, 21d1]
+
+- nvidia_volta:
+    vendor_id: 10de
+    device_id: [1d81, 1db1, 1db2, 1db3, 1db4, 1db5, 1db6, 1db7, 1db8, 1dba, 1dbe, 1df0, 1df2, 1df5, 1df6]
+
+- nvidia_pascal:
+    vendor_id: 10de
+    device_id: [15f0, 15f1, 15f7, 15f8, 15f9, 1725, 172e, 172f, 1b00, 1b01, 1b02, 1b04, 1b06, 1b07, 1b30, 1b38, 1b39, 1b70, 1b78, 1b80, 1b81, 1b82, 1b83, 1b84, 1b87, 1ba0, 1ba1, 1ba2, 1ba9, 1baa, 1bad, 1bb0, 1bb1, 1bb3, 1bb4, 1bb5, 1bb6, 1bb7, 1bb8, 1bb9, 1bbb, 1bc7, 1be0, 1be1, 1c00, 1c01, 1c02, 1c03, 1c04, 1c06, 1c07, 1c09, 1c20, 1c21, 1c22, 1c23, 1c2d, 1c30, 1c31, 1c35, 1c36, 1c60, 1c61, 1c62, 1c70, 1c81, 1c82, 1c83, 1c8c, 1c8d, 1c8e, 1c8f, 1c90, 1c91, 1c92, 1c94, 1c96, 1ca7, 1ca8, 1caa, 1cb1, 1cb2, 1cb3, 1cb6, 1cba, 1cbb, 1cbc, 1cbd, 1ccc, 1ccd, 1cfa, 1cfb, 1d01, 1d02, 1d10, 1d11, 1d12, 1d13, 1d16, 1d33, 1d34, 1d52, 1d56]
 
 - nvidia_maxwell:
-    vendor_id: []
-    pc_id: 
+    vendor_id: 10de
+    device_id: [1340, 1341, 1344, 1346, 1347, 1348, 1349, 134b, 134d, 134e, 134f, 137a, 137b, 137d, 1380, 1381, 1382, 1389, 1390, 1391, 1392, 1393, 1398, 1399, 139a, 139b, 139c, 139d, 13b0, 13b1, 13b2, 13b3, 13b4, 13b6, 13b9, 13ba, 13bb, 13bc, 13bd, 13c0, 13c1, 13c2, 13c3, 13d7, 13d8, 13d9, 13da, 13e7, 13f0, 13f1, 13f2, 13f3, 13f8, 13f9, 13fa, 13fb, 1401, 1402, 1404, 1406, 1407, 1427, 1430, 1431, 1436, 1617, 1618, 1619, 161a, 1667, 174d, 174e, 1789, 179c, 17c2, 17c8, 17f0, 17f1, 17fd]
+
+- nvidia_kepler:
+    vendor_id: 10de
+    device_id: [0fc0, 0fc1, 0fc2, 0fc5, 0fc6, 0fc8, 0fc9, 0fcd, 0fce, 0fd1, 0fd2, 0fd3, 0fd4, 0fd5, 0fd6, 0fd8, 0fd9, 0fdb, 0fdf, 0fe0, 0fe1, 0fe2, 0fe3, 0fe4, 0fe5, 0fe6, 0fe7, 0fe8, 0fe9, 0fea, 0fec, 0fed, 0fee, 0fef, 0ff1, 0ff2, 0ff3, 0ff5, 0ff6, 0ff7, 0ff8, 0ff9, 0ffa, 0ffb, 0ffc, 0ffd, 0ffe, 0fff, 1001, 1003, 1004, 1005, 1007, 1008, 100a, 100c, 101e, 101f, 1020, 1021, 1022, 1023, 1024, 1026, 1027, 1028, 1029, 102a, 102d, 102e, 102f, 103a, 103c, 103f, 1180, 1182, 1183, 1184, 1185, 1186, 1187, 1188, 1189, 118a, 118b, 118c, 118d, 118e, 118f, 1191, 1193, 1194, 1195, 1198, 1199, 119a, 119d, 119e, 119f, 11a0, 11a1, 11a2, 11a3, 11a7, 11a8, 11a9, 11af, 11b0, 11b1, 11b4, 11b6, 11b7, 11b8, 11b9, 11ba, 11bb, 11bc, 11bd, 11be, 11bf, 11c0, 11c2, 11c3, 11c4, 11c5, 11c6, 11c7, 11c8, 11cb, 11e0, 11e1, 11e2, 11e3, 11e7, 11fa, 11fc]
 
 # ==========
 driver_tags:
